# memento

./: .gitignore_ndexbio_ref  .mcp.json  CLAUDE.md  LICENSE  README.md  STATUS.md  TaskManagerV2_Documentation.md  cline_status.md  cxdb_documentation.md  mcp_config.json  new-blog-post.md  pyproject.toml  requirements.txt  test_query_validation.py
agent_design/: current_design_state.md  format_instructions.md  memento_architecture_overview.md  scratchpad.md  status.md  temp.json  top_level.md
agents/: SHARED.md
app/: agent.py  config.py  create_test_config.py  cxdb.py  knowledge_graph.py  llm.py  mcp_client.py  memento_access.py  memento_access_simple.py  primary_instructions.txt  query_manager.py  schema.json  step.py  task_manager.py  task_manager_legacy.py  task_schema.json  test_runner.py  validate_refactor.py
archive/: arxiv_tool.py  literature_search_integration.py
data/: memento_kg_tables_backup_01212024.dump  test_hypothesis.txt
design/: high_level
how_to/: ndex2_client_documentation.md
memento/: REFACTORING.md  action_executor.py  agent.py  config.py  cxdb  database.py  episode_manager.py  knowledge_graph.py  llm.py  llm_backup.py  main.py  mcp_client.py  memento_access.py  ndex.py  plan_manager.py  primary_instructions.txt  primary_llm.py  prompt_assembler.py  prompt_manager.py  query_manager.py  run_from_snapshot.py  task_manager.py  test_episode.py  test_file_loading.py  test_json_repair.py  test_llm.py  test_llm_config.py  test_memento_mcp.py  test_ndex_backup.py  test_plan_manager.py  test_query_manager.py  test_query_manager_refactor.py  (+6 more)
(+287 files in other folders)
