[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ndexbio-agents"
version = "0.1.0"
description = "AI agent infrastructure for biological research using NDEx"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "ndex2>=3.8.0",
    "mcp[cli]>=1.0.0",
    "requests>=2.28.0",
    "pyyaml>=6.0",
    "feedparser>=6.0",
    "real_ladybug>=0.15.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[tool.setuptools.packages.find]
include = ["tools*", "workflows*"]

[tool.pytest.ini_options]
testpaths = ["tools/ndex_mcp/tests", "tools/biorxiv/tests", "tests"]
pythonpath = ["."]
